--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
@@ -33,11 +33,11 @@
     </mat-form-field>
   </div>
   <div *ngIf="codes" class="fx-column-start-stretch">
-    <div *ngFor="let cd of codes" class="fx-row-start-stretch">
+    <div *ngFor="let cd of codes; index as codeIndex" class="fx-row-start-stretch">
       <code-full [code]="cd" class="fx-flex-fill" [style.margin-bottom.px]="4"
                  [allCodes]="codes"
                  (codeChanged)="codesChanged.emit(codes)"></code-full>
-      <button mat-icon-button (click)="deleteCode(cd.id)" [matTooltip]="'code.prompt.delete' | translate">
+      <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
