--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/var-codes-manual.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/var-codes-manual.component.html
@@ -19,12 +19,12 @@
     </div>
   </div>
   <div *ngIf="codes" class="fx-column-start-stretch">
-    <div *ngFor="let cd of codes" class="fx-row-start-stretch">
+    <div *ngFor="let cd of codes; index as codeIndex" class="fx-row-start-stretch">
       <code-manual [code]="cd" class="fx-flex-fill" [style.margin-bottom.px]="4"
                    [isEmptyCodeExists]="isEmptyCodeExists"
                    [allCodes]="codes"
                    (codeChanged)="codesChanged.emit(codes)"></code-manual>
-      <button mat-icon-button (click)="deleteCode(cd.id)" [matTooltip]="'code.prompt.delete' | translate">
+      <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
