--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-value-list/code-value-list.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-value-list/code-value-list.component.html
@@ -1,33 +1,6 @@
 <div *ngIf="code" class="fx-row-start-stretch fx-gap-5">
   <div class="fx-column-start-stretch fx-flex-fill">
-    <div class="code-main-data fx-row-start-center">
-      <mat-form-field [class]="uniqueNumberValidator(code.id) ? 'unique-id' : 'not-unique-id'" [style.width.px]="80">
-        <mat-label>{{'code.id' | translate}}</mat-label>
-        <input matInput
-               required
-               [(ngModel)]="code.id"
-               (ngModelChange)="setCodeChanged()"
-               type="number">
-      </mat-form-field>
-      <mat-form-field
-        *ngIf="maxScore > 1"
-        [class]="code.score > 0 ? 'correct' : 'not-correct'"
-        [style.width.px]="100">
-        <mat-label>{{'code.score' | translate}}</mat-label>
-        <input matInput
-               type="number"
-               required
-               [(ngModel)]="code.score"
-               (ngModelChange)="setCodeChanged()">
-      </mat-form-field>
-      <mat-form-field class="fx-flex-fill">
-        <mat-label>{{'code.description' | translate}}</mat-label>
-        <input matInput
-               [placeholder]="'code.description' | translate"
-               [(ngModel)]="code.label"
-               (ngModelChange)="setCodeChanged()">
-      </mat-form-field>
-    </div>
+    <code-header (codeDataChanged)="setCodeChanged()" [code]="code" [allCodes]="allCodes"></code-header>
     <div class="fx-row-start-start fx-flex-fill">
       <div class="has-rules-warning">
         <p *ngIf="elseCodeExists && code.manualInstruction"
