--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/code-manual.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/code-manual.component.html
@@ -20,17 +20,8 @@
       <div class="has-rules-warning">
         <p *ngIf="firstRuleSet.rules.length > 0" matTooltip="Dieser Code enthält Regeln für das automatische Kodieren.">!!</p>
       </div>
-      <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
-        <mat-card-subtitle class="fx-row-space-between-center">
-          {{'manual-instruction.prompt-code' | translate}}
-          <button mat-icon-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </mat-card-subtitle>
-        <mat-card-content class="instructions">
-          <div [innerHTML]="code ? getSanitizedText(code.manualInstruction) : null"></div>
-        </mat-card-content>
-      </mat-card>
+      <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()"
+                        class="fx-flex-fill" [style.max-height.px]="200"></code-instruction>
     </ng-container>
   </div>
 </div>
