--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
@@ -33,22 +33,22 @@
     </mat-form-field>
   </div>
   <ng-container *ngIf="codes">
-    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch" [style.max-height.px]="300">
+    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch" [style.max-height.px]="500">
       <ng-container *ngIf="code">
-        <div class="fx-column-start-stretch" [style.flex]="'0 0 60%'">
+        <div class="fx-column-start-stretch" [style.max-width.%]="60">
           <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
                        [code]="code" [allCodes]="codes"></code-header>
-          <code-rules-full [style.padding-left.px]="4"
+          <code-rules-full [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
                            [code]="code" [arrayMode]="true" [fragmentMode]="true"
                            (codeRulesChanged)="codesChanged.emit(codes)"></code-rules-full>
         </div>
-        <code-instruction [code]="code" (codeDataChanged)="codesChanged.emit(codes)" [style.flex]="'0 0 36%'"></code-instruction>
+        <code-instruction [code]="code" (codeDataChanged)="codesChanged.emit(codes)" class="fx-flex-fill"></code-instruction>
         <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
           <mat-icon>delete</mat-icon>
         </button>
       </ng-container>
     </div>
-    <div class="fx-row-start-center">
+    <div class="fx-row-start-center" [style.margin-top.px]="8">
       <button mat-raised-button (click)="addCode()">
         <mat-icon>add</mat-icon>{{'code.prompt.add' | translate}}
       </button>
