--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/code-rules-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/code-rules-full.component.html
@@ -1,18 +1,17 @@
 <mat-card [style.height.%]="100">
   <mat-card-subtitle>
-    <div class="fx-row-space-between-start">
+    <div class="fx-row-space-between-center" [style.padding]="'0 16px'">
       <div [style.color]="'grey'" [style.font-size]="'smaller'">{{'code.prompt-auto-coding' | translate}}</div>
-      <button mat-icon-button  *ngIf="code && arrayMode" [matTooltip]="'rule-set.prompt.add' | translate" (click)="addRuleSet()">
-        <mat-icon>add</mat-icon>
-      </button>
-      <div class="fx-column-start-stretch" *ngIf="code && arrayMode">
-        <label>{{"rule-set.prompt.operator" | translate }}</label>
-        <mat-radio-group [(ngModel)]="code.ruleSetOperatorAnd"
-                         (ngModelChange)="setCodeRulesChanged()"
-                         class="fx-row-space-between-center">
-          <mat-radio-button [value]="false">{{"rule.operator.false" | translate }}</mat-radio-button>
-          <mat-radio-button [value]="true">{{"rule.operator.true" | translate }}</mat-radio-button>
-        </mat-radio-group>
+      <div *ngIf="code" class="fx-row-end-center">
+        <button mat-icon-button  *ngIf="arrayMode" [matTooltip]="'rule-set.prompt.add' | translate" (click)="addRuleSet()">
+          <mat-icon>add</mat-icon>
+        </button>
+        <mat-button-toggle-group *ngIf="code.ruleSets.length > 1" appearance="legacy"
+                                 [(ngModel)]="code.ruleSetOperatorAnd"
+                                 [matTooltip]="'rule-set.prompt.operator' | translate">
+          <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
+          <mat-button-toggle [value]="true">{{"rule.operator.true" | translate }}</mat-button-toggle>
+        </mat-button-toggle-group>
       </div>
     </div>
   </mat-card-subtitle>
@@ -66,17 +65,14 @@
               {{('rule.' + newSource) | translate}}
             </button>
           </mat-menu>
-          <div *ngIf="firstRuleSet && firstRuleSet.rules.length === 0" [matMenuTriggerFor]="menu"
+          <div *ngIf="ruleSet.rules.length === 0" [matMenuTriggerFor]="menu"
                class="no-rules">{{'rule.no-rules' | translate}}</div>
-          <div class="fx-column-start-stretch" *ngIf="firstRuleSet && firstRuleSet.rules.length > 1">
-            <label>{{"rule.prompt.operator" | translate }}</label>
-            <mat-radio-group [(ngModel)]="firstRuleSet.ruleOperatorAnd"
-                             (ngModelChange)="setCodeRulesChanged()"
-                             class="fx-row-space-between-center">
-              <mat-radio-button [value]="false">{{"rule.operator.false" | translate }}</mat-radio-button>
-              <mat-radio-button [value]="true">{{"rule.operator.true" | translate }}</mat-radio-button>
-            </mat-radio-group>
-          </div>
+          <mat-button-toggle-group *ngIf="ruleSet.rules.length > 1" appearance="legacy"
+                                   [(ngModel)]="ruleSet.ruleOperatorAnd"
+                                   [matTooltip]="'rule.prompt.operator' | translate">
+            <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
+            <mat-button-toggle [value]="true">{{"rule.operator.true" | translate }}</mat-button-toggle>
+          </mat-button-toggle-group>
         </div>
       </mat-tab>
     </mat-tab-group>
